<resources>
    <string name="app_name">MAgents</string>

    <!--    Login-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="orWith">or with</string>
    <string name="login">Login</string>
    <string name="loginAsGuest">Login as Guest</string>
    <string name="createAnAccount">New user? Create an account</string>
    <string name="signUp">Sign Up</string>

    <!--- Forgot Password -->
    <string name="enterEmailForgotPassword">Enter your email address below to reset password</string>
    <string name="resetPassword">Reset Password</string>
    <string name="logout">Logout</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>

    <!--    Registration-->
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="first_name">First Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="country_code">+63</string>
    <string name="age">Age</string>

    <!--    Account-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="account_settings">Account Settings</string>
    <string name="business_information">Business Information</string>
    <string name="shop_addresses">Shop Addresses</string>
    <string name="bank_account">Bank Account</string>
    <string name="store_email">Store email</string>
    <string name="uploading">Uploading</string>
    <string name="warehouse_address">Warehouse Address</string>
    <string name="business_address">Business Address</string>
    <string name="return_address">Return Address</string>
    <string name="submit">Submit</string>
    <string name="delete_address">Delete Address</string>

    <!--    Products -->
    <string name="prodcut_name">Product Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="add_image">Add Image</string>
    <string name="category">Category</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
    <string name="product_name">Product Name</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="rating">Rating:</string>
    <string name="sold">Sold:</string>
    <string name="online">Online</string>
    <string name="inactive">Inactive</string>
    <string name="search">Search Product</string>
    <string name="filter">Filter</string>

    <!--    Orders-->
    <string name="pending">Pending</string>
    <string name="topack">ToPack</string>
    <string name="toship">ToShip</string>
    <string name="delivered">Delivered</string>
    <string name="completed">Completed</string>
    <string name="unpaid">Unpaid</string>
    <string name="all">All</string>
    <string name="peso_sign">₱</string>
    <string name="status">Status:</string>
    <string name="order_date">Order date:</string>

    <!--    Home-->
    <string name="products">Products</string>
    <string name="add_products">Add Products</string>
    <string name="add_service">Add Service</string>
    <string name="return_order">Return Order</string>
    <string name="help">Help</string>
    <string name="customer_care">Customer Care</string>
    <string name="feedback">Feedback</string>
    <string name="orders">Orders</string>
    <string name="upgrade_status_label">Upgrade to Fully Verified to gain full access on MAgents services.</string>

    <!--    Places API Key-->
    <string name="places_api_key">AIzaSyAwpadNKq1dNkmRcS9oHxfXwX_xhnBQSKk</string>
    <string name="resendCode">Resend Code</string>
    <string name="notifications">Notifications</string>
    <string name="chat">Chat</string>
    <string name="services">Services</string>
    <string name="bookings">Bookings</string>
    <string name="share_product">Share product</string>
    <string name="boost_product">Boost product</string>
    <string name="delete_product">Delete product</string>
    <string name="product_type_product">Product</string>
    <string name="product_type_service">Service</string>
    <string name="quantity">Quantity</string>
    <string name="add_variant">Add Variant</string>
    <string name="variant_name">Variant Description</string>
    <string name="variant_stock">Stock</string>
    <string name="delete_variant">Delete</string>
    <string name="update">Update</string>
    <string name="service_name">Service Name</string>
    <string name="makeOnline">Make Online</string>
    <string name="makeInactive">Make Inactive</string>


    <string-array name="id_types">
        <item>TIN ID</item>
        <item>Driver License</item>
        <item>SSS</item>
        <item>Passport</item>
    </string-array>
</resources>