<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="loginInterface"
            type="com.aix.mpagents.interfaces.LoginInterface" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textViewResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="Login"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewResetPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_border_black"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:passwordToggleEnabled="true"
            app:boxStrokeWidthFocused="0dp"
            app:boxStrokeWidth="0dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_border_black"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.714"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="211dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/forgotPassword"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            android:onClick="@{() -> loginInterface.onForgotPasswordClick()}"
            />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword"
            android:onClick="@{() -> loginInterface.onLoginWithUsernamePasswordClick()}"
            android:elevation="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLoginAsGuest"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_border_primary_no_solid"
            android:onClick="@{() -> loginInterface.onLoginAsGuestClick()}"
            android:text="@string/loginAsGuest"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
            app:layout_constraintStart_toStartOf="@+id/buttonLogin"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            android:visibility="gone"
            android:elevation="10dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/orWith"
            app:layout_constraintEnd_toEndOf="@+id/buttonLoginAsGuest"
            app:layout_constraintStart_toStartOf="@+id/buttonLoginAsGuest"
            app:layout_constraintTop_toBottomOf="@+id/buttonLoginAsGuest"
            android:visibility="visible"/>

        <!--        <androidx.appcompat.widget.AppCompatButton-->
        <!--            android:id="@+id/facebookLoginBtn"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="8dp"-->
        <!--            android:layout_marginEnd="8dp"-->
        <!--            android:backgroundTint="@color/facebookBlue"-->
        <!--            android:drawableStart="@drawable/ic_baseline_facebook_24"-->
        <!--            android:text="@string/facebook"-->
        <!--            android:textAllCaps="false"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:elevation="10dp"-->
        <!--            android:visibility="gone"-->
        <!--            app:layout_constraintEnd_toStartOf="@+id/guideline2"-->
        <!--            app:layout_constraintStart_toStartOf="@+id/loginAsGuestBtn"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/textView2" />-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLoginGmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:elevation="4dp"
            android:onClick="@{() -> loginInterface.onLoginWithGoogle()}"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
            app:layout_constraintStart_toStartOf="@+id/buttonLogin"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:visibility="visible"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLoginMobileNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_baseline_local_phone_24"
            android:elevation="4dp"
            android:onClick="@{() -> loginInterface.onLoginMobile()}"
            android:text="Phone Number"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
            app:layout_constraintStart_toStartOf="@+id/buttonLogin"
            app:layout_constraintTop_toBottomOf="@+id/buttonLoginGmail"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/textViewNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/createAnAccount"
            app:layout_constraintEnd_toEndOf="@+id/buttonLoginAsGuest"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/buttonLoginAsGuest"
            app:layout_constraintTop_toBottomOf="@+id/buttonLoginMobileNumber" />

        <TextView
            android:id="@+id/buttonSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signUp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textViewNewUser"
            app:layout_constraintStart_toStartOf="@+id/textViewNewUser"
            app:layout_constraintTop_toBottomOf="@+id/textViewNewUser"
            android:onClick="@{() -> loginInterface.onSignUpClick()}"

            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

<!--        <com.facebook.login.widget.LoginButton-->
<!--            android:id="@+id/buttonFacebookLogin"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:layout_marginBottom="30dp"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/guideline2"-->
<!--            app:layout_constraintStart_toStartOf="@+id/buttonLoginAsGuest"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/textView2"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
